# glad_framework

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: config.json  dynamics.cpp  dynamics.h  gl1.vcxproj  globals.h  light.cpp  main.cpp  mesh.h  shader.h  test.cpp  utils.h
src/assets/bar/: small_bar.ele  small_bar.node
src/assets/dragon/: dragon.node
src/shaders/: skycube.vs
src/shaders/depth/: depth.frag
src/shaders/screen/: screen.frag
src/shaders/shadow/: disp.tesc  disp.tese  op.frag  opd.frag  opn.frag  shadow.frag  shadow.vert  shadow1.vert  show_lines.frag  show_lines.geom  show_lines.vert
src/shaders/simple/: normal.frag  simple.frag  simple.vert
src/shaders/view/: view.fs
